trying to fix android cutoff

--- a/css/mobile_landing.css
+++ b/css/mobile_landing.css
@@ -1,6 +1,6 @@
 #desktop_assets_wrapper{
     width: 100vw;
-    height: 100vh;
+    min-height: 100vh;
 
 }
 
